@@ -3250,11 +3250,11 @@ DUMMY(MONS_ELEMENTAL, 'E', LIGHTGREY, "elemental")
     MONS_GIANT_EYEBALL, 'G', WHITE, "giant eyeball",
     M_SEE_INVIS | M_FLIES,
     MR_NO_FLAGS,
-    10, MONS_GIANT_EYEBALL, MONS_GIANT_EYEBALL, MH_NATURAL, 10,
+    6, MONS_GIANT_EYEBALL, MONS_GIANT_EYEBALL, MH_NATURAL, 10,
     { AT_NO_ATK, AT_NO_ATK, AT_NO_ATK, AT_NO_ATK },
-    3, 165,
+    9, 165,
     0, 1, MST_GIANT_EYEBALL, CE_NOCORPSE, S_SILENT,
-    I_BRAINLESS, HT_LAND, 3, DEFAULT_ENERGY,
+    I_BRAINLESS, HT_LAND, 10, DEFAULT_ENERGY,
     MONUSE_NOTHING, SIZE_MEDIUM, MON_SHAPE_ORB,
     {TILEP_MONS_GIANT_EYEBALL}, TILE_ERROR
 },
